Define names for controls in CollectionControl.cs

--- a/Views/UserControls/CollectionControl.resx
+++ b/Views/UserControls/CollectionControl.resx
@@ -80,7 +80,7 @@
         i1pXnwULMZFIJBKJRCKRGMTAwDUONkezpTtg0wAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="PastaButton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="PastaCollectionButton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABOlJREFUeF7t
         m0moHUUUhqvbOG0UTTCiRgQHRN0ZEYmKMy5VUCLqSs3CRUQluHGhOCTEKXEhDqiIA6IgRl2IQYzDJg4o
@@ -107,7 +107,7 @@
         AABJRU5ErkJggg==
 </value>
   </data>
-  <data name="CakeButton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="CakeCollectionButton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAy5JREFUeF7t
         2kuoTVEcx/HrTQh55DEQAwmFDJQkKZGS10AGRoQkSqSkjEgZyMCEMjASZeJRJuSRvJ9FXiXl/chr4M33
@@ -126,7 +126,7 @@
         eb9kgb4noK/e5H0TJSUlJSUlJSUlpYHS1PQXePizXmksT/EAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="PizzaButton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="PizzaCollectionButton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAACGJJREFUeF7t
         mwWMJEUUhnsadztcDg9wh7u7BSdAcAmB4BAIGlyCBSe4huAaJPgRgt/hGtzd3eX736tqenqnR5bZ2dll
